# heirvo

./: .editorconfig  .gitignore  CHANGELOG.md  LICENSE  README.md  TESTERS.md  index.html  package-lock.json  package.json  tailwind.config.js
docs/: ai-restoration.md  dvd-video.md  ffmpeg-pipeline.md  monetization.md  performance.md  product-vision.md  recovery-engine.md  release-prep.md  testing.md  ui-ux.md  windows-native.md
marketing/: .env  .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite-env.d.ts  vite.config.ts
marketing/public/: robots.txt  sitemap.xml
marketing/src/: index.css  main.tsx
marketing/src/components/: BrandMark.tsx  Cursor.tsx  FAQ.tsx  Footer.tsx  HeroDisc.tsx  LoadSequence.tsx  Marquee.tsx  Nav.tsx  ScrollProgress.tsx  SplitHeading.tsx
marketing/src/components/glass/: GlassCard.tsx  MagneticButton.tsx
marketing/src/components/sections/: BeforeAfter.tsx  Hero.tsx  HeroBrandDisc.tsx  HowItWorks.tsx  Pricing.tsx  SupportedMedia.tsx  TrustRow.tsx
marketing/src/components/showcase/: ShowcaseNav.tsx
marketing/src/lib/: gsap-fx.ts  lemon-squeezy.ts  useLenis.ts
marketing/src/pages/: AcceptableUse.tsx  Activate.tsx  Download.tsx  LandingMin1.tsx  NotFound.tsx  Privacy.tsx  RecoverH.tsx  Refund.tsx  Support.tsx  Terms.tsx
scripts/: fetch-ffmpeg.ps1
src/: index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: README.txt  icon.icns
src-tauri/migrations/: 20250101000000_initial.sql  20250507000000_disc_type.sql  20260507000000_user_label.sql
src-tauri/resources/ffmpeg/: README.md
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/ai/: backend.rs  jobs.rs  mock_backend.rs  mod.rs  model_downloader.rs  models.rs  onnx_backend.rs  pipeline.rs  preview.rs  tiling.rs  video_pipeline.rs
src-tauri/src/commands/: ai.rs  audio.rs  diagnostic.rs  drive.rs  dvd.rs  license.rs  media.rs  mod.rs  preflight.rs  recovery.rs  session.rs  storage.rs
src-tauri/src/disc/: audio_cd.rs  drive.rs  iso_file.rs  mock.rs  mod.rs  scsi_windows.rs  sector.rs
src-tauri/src/dvd/: ifo.rs  iso9660.rs  mod.rs  structure.rs  test_iso.rs
src-tauri/src/licensing/: mod.rs
src-tauri/src/media/: ffmpeg.rs  ffmpeg_install.rs  iso.rs  mod.rs  stream_copy.rs  transcode.rs  vob.rs
src-tauri/src/recovery/: engine.rs  health.rs  map.rs  mod.rs  passes.rs  rmap.rs
src-tauri/src/session/: db.rs  manager.rs  mod.rs
src/app/: App.tsx
src/components/: UpdateBanner.tsx
src/lib/: audio.ts  friendly-errors.ts  human.ts  ipc.ts  types.ts  useLicense.ts
src/screens/: Home.tsx
src/screens/dashboard/: Dashboard.tsx  DiscAnimation.tsx  EnhancementOffer.tsx  OutputPanel.tsx  SectorMapCanvas.tsx
src/screens/dashboard/disc-variants/: ActivityRing.tsx  ActivityRingAchievement.tsx  ActivityRingCinematic.tsx  ActivityRingMeditative.tsx  CRTScanline.tsx  Constellation.tsx  CrystalLens.tsx  NowPlaying.tsx  VinylRecord.tsx  VisionGlass.tsx  (+1 more)
src/screens/enhancement/: EnhancementStudio.tsx
src/screens/history/: SessionHistory.tsx
src/screens/preflight/: Preflight.tsx
src/screens/settings/: Settings.tsx
src/screens/transcode/: Transcode.tsx  TranscodePanel.tsx
src/screens/wizard/: Wizard.tsx
src/utils/: gsap-fx.ts
tools/synth-disc/: Cargo.toml  README.md
tools/synth-disc/src/: corrupt.rs  iso9660.rs  main.rs  manifest.rs
